# pallas

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  cliff.toml  deny.toml  flake.nix  release.toml
kes-cli/: Cargo.toml
kes-cli/src/: derive_pk.rs  derive_sk.rs  generate_seed.rs  generate_sk.rs  main.rs  period.rs  sign.rs  update.rs  verify.rs
kes-cli/tests/: cli.rs
pallas-addresses/: Cargo.toml  README.md
pallas-addresses/src/: byron.rs  lib.rs  varuint.rs
pallas-alonzo/: Cargo.toml  README.md
pallas-alonzo/src/: crypto.rs  framework.rs  lib.rs  model.rs  utils.rs
pallas-alonzo/src/test_data/: test1.block  test12.block  test13.block  test2.block  test3.block  test4.block
pallas-applying/: Cargo.toml  README.md
pallas-applying/docs/: alonzo.md  babbage.md  byron-validation-rules.md  byron.md  shelley-validation-rules.md  shelleyMA-validation-rules.md
pallas-applying/src/: alonzo.rs  babbage.rs  byron.rs  conway.rs  lib.rs  shelley.rs  shelley_ma.rs  types.rs  utils.rs
pallas-applying/src/types/: environment.rs  validation.rs
pallas-applying/src/utils/: environment.rs  json.rs  validation.rs
pallas-applying/tests/: README.md  alonzo.rs  babbage.rs  byron.rs  common.rs  shelley.rs  shelley_ma.rs
pallas-bech32/: Cargo.toml  README.md
pallas-bech32/src/: cip14.rs  cip5.rs  lib.rs
pallas-blockfetch/: Cargo.toml  README.md
pallas-blockfetch/examples/: client.rs
pallas-blockfetch/src/: lib.rs
pallas-byron/: Cargo.toml  README.md
pallas-byron/src/: framework.rs  lib.rs  model.rs  utils.rs
pallas-byron/src/test_data/: test2.block
pallas-chainsync/: Cargo.toml  README.md
pallas-chainsync/examples/: blocks.rs  headers.rs
pallas-chainsync/src/: clients.rs  codec.rs  lib.rs  protocol.rs
pallas-codec/: Cargo.toml  README.md
pallas-codec/src/: cborheap.rs  lib.rs  utils.rs
pallas-codec/src/flat/: zigzag.rs
pallas-codec/tests/: flat.rs  zigzag.rs
pallas-configs/: Cargo.toml  README.md
pallas-configs/src/: alonzo.rs  byron.rs  conway.rs  cost_models.rs  lib.rs  shelley.rs
pallas-crypto/: Cargo.toml  README.md
pallas-crypto/proptest-regressions/kes/: summed_kes_tests.txt
pallas-crypto/src/: lib.rs  memsec.rs
pallas-crypto/tests/: kes_golden.rs  vrf_golden.rs
pallas-handshake/: Cargo.toml  README.md
pallas-handshake/examples/: client.rs  node.rs
pallas-handshake/src/: common.rs  lib.rs  n2c.rs  n2n.rs
pallas-hardano/: Cargo.toml  README.md
pallas-hardano/src/: chunk.rs  lib.rs  primary.rs  secondary.rs
pallas-localstate/: Cargo.toml  README.md
pallas-localstate/examples/: chainpoint.rs
pallas-localstate/src/: codec.rs  lib.rs  queries.rs
pallas-machines/: Cargo.toml  README.md
pallas-machines/examples/: blockfetch.rs  chainsync-blocks.rs  chainsync-headers.rs  handshake-client.rs  handshake-node.rs  localstate-chainpoint.rs  txsubmission-naive.rs
pallas-machines/src/: codec.rs  lib.rs  payloads.rs  primitives.rs
pallas-math/: Cargo.toml  README.md
pallas-math/proptest-regressions/: math.txt
pallas-math/src/: lib.rs  math.rs  math_bigint.rs  math_dashu.rs  math_gmp.rs  math_malachite.rs  math_num.rs
pallas-miniprotocols/: Cargo.toml  README.md
pallas-miniprotocols/examples/: blockfetch.rs  chainsync-blocks.rs  chainsync-headers.rs  handshake-client.rs  handshake-node.rs  localstate-chainpoint.rs  txsubmission-naive.rs
pallas-miniprotocols/src/: codec.rs  common.rs  lib.rs  machines.rs  payloads.rs
pallas-miniprotocols/tests/: integration.rs
pallas-multiplexer/: Cargo.toml  README.md
pallas-multiplexer/examples/: listener.rs  sender.rs
pallas-multiplexer/src/: agents.rs  bearers.rs  demux.rs  lib.rs  mux.rs  std.rs  sync.rs  threads.rs
pallas-multiplexer/tests/: integration.rs
pallas-network/: Cargo.toml  README.md
pallas-network/src/: bearer.rs  facades.rs  lib.rs  multiplexer.rs  plexer.rs
pallas-network/test_resources/: complete_script_error.txt
pallas-network/tests/: leiosfetch.rs  leiosnotify.rs  plexer.rs  protocols.rs
pallas-network2/: Cargo.toml  README.md
pallas-network2/benches/: protocol.rs
pallas-network2/src/: bearer.rs  emulation.rs  interface.rs  lib.rs  standard.rs  testing.rs
pallas-network2/tests/: happy_path.rs  initiator_responder.rs  responder_happy_path.rs
pallas-primitives/: Cargo.toml  README.md
pallas-primitives/benches/: alonzo_decoding.rs
pallas-primitives/src/: framework.rs  lib.rs  macros.rs  plutus_data.rs  probing.rs  utils.rs
pallas-rolldb/: Cargo.toml  README.md
pallas-rolldb/src/: kvtable.rs  lib.rs
pallas-storage/: Cargo.toml  README.md
pallas-storage/src/: lib.rs
pallas-traverse/: Cargo.toml  README.md
pallas-traverse/src/: assets.rs  aux.rs  auxiliary.rs  block.rs  cert.rs  era.rs  fees.rs  governance.rs  hashes.rs  header.rs  input.rs  iter.rs  json.rs  lib.rs  meta.rs  mint.rs  output.rs  probe.rs  redeemers.rs  signers.rs  size.rs  support.rs  time.rs  tx.rs  update.rs  value.rs  wellknown.rs  withdrawals.rs  witnesses.rs
pallas-txbuilder/: Cargo.toml  README.md
pallas-txbuilder/src/: asset.rs  babbage.rs  builder.rs  conway.rs  fee.rs  lib.rs  native_script.rs  plutus_script.rs  prelude.rs  scriptdata.rs  strategy.rs  transaction.rs  util.rs
pallas-txbuilder/tests/: build_conway.rs  builder.rs  manual.rs  native_script.rs  plutus.rs  plutus_script.rs  validations.rs
pallas-txsubmission/: Cargo.toml  README.md
pallas-txsubmission/examples/: naive.rs
pallas-txsubmission/src/: lib.rs
pallas-upstream/: Cargo.toml  README.md
pallas-upstream/src/: api.rs  blockfetch.rs  chainsync.rs  cursor.rs  framework.rs  lib.rs  newplexer.rs  plexer.rs  wellknown.rs  worker.rs
pallas-upstream/tests/: integration.rs
pallas-utxorpc/: Cargo.toml  README.md  new_snapshot.json
pallas-utxorpc/src/: certs.rs  genesis.rs  lib.rs  params.rs  shared.rs
pallas-validate/: Cargo.toml  README.md
pallas-validate/docs/: alonzo.md  babbage.md
pallas-validate/src/: lib.rs  utils.rs
pallas-validate/tests/: README.md  alonzo.rs  babbage.rs  byron.rs  common.rs  conway.rs  shelley_ma.rs  utils.rs
(+605 files in other folders)
