[workspace]
resolver = "2"
members = [
  "pallas-codec",
  "pallas-addresses",
  "pallas-network",
  "pallas-network2",
  "pallas-crypto",
  "pallas-configs",
  "pallas-primitives",
  "pallas-traverse",
  "pallas-txbuilder",
  "pallas-utxorpc",
  "pallas-hardano",
  "pallas-math",
  "pallas-validate",
  "pallas",
  "examples/block-download",
  "examples/block-decode",
  "examples/crawler",
  "examples/n2n-miniprotocols",
  "examples/n2c-miniprotocols",
  "examples/p2p",
  "examples/leios-fetch-demo",
]
