[workspace.package]
version = "1.0.0-alpha.6"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
authors = ["TxPipe <hello@txpipe.io>"]

[workspace]
resolver = "2"
members = [
  "pallas-codec",
  "pallas-addresses",
  "pallas-network",
  "pallas-network2",
  "pallas-crypto",
  "pallas-configs",
  "pallas-primitives",
  "pallas-traverse",
  "pallas-txbuilder",
  "pallas-utxorpc",
  "pallas-hardano",
  "pallas-math",
  "pallas-validate",
  "pallas",
  "examples/block-download",
  "examples/block-decode",
  "examples/crawler",
  "examples/n2n-miniprotocols",
  "examples/n2c-miniprotocols",
  "examples/p2p-discovery",
  "examples/p2p-responder",
  "examples/p2p-initiator",
]

[workspace.dependencies]
hex = "0.4.3"
thiserror = "2.0.18"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
itertools = "0.14.0"
tracing = "0.1.41"
chrono = "0.4.41"
socket2 = "0.6.3"
byteorder = "1.5.0"
rand = "0.10.1"
proptest = "1.7.0"

pallas = { version = "=1.0.0-alpha.6", path = "pallas" }
pallas-codec = { version = "=1.0.0-alpha.6", path = "pallas-codec" }
pallas-crypto = { version = "=1.0.0-alpha.6", path = "pallas-crypto" }
pallas-addresses = { version = "=1.0.0-alpha.6", path = "pallas-addresses" }
pallas-primitives = { version = "=1.0.0-alpha.6", path = "pallas-primitives" }
pallas-traverse = { version = "=1.0.0-alpha.6", path = "pallas-traverse" }
pallas-network = { version = "=1.0.0-alpha.6", path = "pallas-network" }
pallas-network2 = { version = "=1.0.0-alpha.6", path = "pallas-network2" }
pallas-configs = { version = "=1.0.0-alpha.6", path = "pallas-configs" }
pallas-txbuilder = { version = "=1.0.0-alpha.6", path = "pallas-txbuilder" }
pallas-utxorpc = { version = "=1.0.0-alpha.6", path = "pallas-utxorpc" }
pallas-hardano = { version = "=1.0.0-alpha.6", path = "pallas-hardano" }
pallas-math = { version = "=1.0.0-alpha.6", path = "pallas-math" }
pallas-validate = { version = "=1.0.0-alpha.6", path = "pallas-validate" }

[workspace.metadata.release]
push = false
publish = false
tag-name = "v{{version}}"
pre-release-commit-message = "release: v{{version}}"
pre-release-hook = [
    "git",
    "cliff",
    "-o",
    "CHANGELOG.md",
    "--tag",
    "{{version}}",
]
