[package]
name = "pallas-addresses"
description = "Ergonomic library to work with different Cardano addresses"
version = "0.31.0"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-byron"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]

[dependencies]
hex = "0.4.3"
pallas-crypto = { version = "=0.31.0", path = "../pallas-crypto" }
pallas-codec = { version = "=0.31.0", path = "../pallas-codec" }
base58 = "0.2.0"
bech32 = "0.9.1"
thiserror = "1.0"
crc = "3.0.1"
cryptoxide = "0.4"
