[package]
name = "pallas-addresses"
description = "Ergonomic library to work with different Cardano addresses"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true
documentation = "https://docs.rs/pallas-byron"
readme = "README.md"

[dependencies]
hex.workspace = true
pallas-crypto.workspace = true
pallas-codec.workspace = true
base58 = "0.2.0"
bech32 = "0.11.1"
thiserror.workspace = true
crc = "3.0.1"
cryptoxide = "0.4"
