[package]
name = "pallas-alonzo"
description = "Ledger primitives and cbor codec for the Alonzo era"
version = "0.3.2"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-alonzo"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "Santiago Carmuega <santiago@carmuega.me>"
]

[features]
crypto = ["cryptoxide"]

[dependencies]
minicbor = { version = "0.11.5", features = ["std"] }
minicbor-derive = "0.7.2"
hex = "0.4.3"
log = "0.4.14"
cryptoxide = { version = "0.3.2", optional = true }

