[package]
name = "pallas-alonzo"
description = "Ledger primitives and cbor codec for the Alonzo era"
version = "0.3.9"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-alonzo"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "Santiago Carmuega <santiago@carmuega.me>"
]

[dependencies]
minicbor = { version = "0.12", features = ["derive"] }
minicbor-derive = "0.8.0"

[dev-dependencies]
hex = "0.4.3"
