[package]
name = "pallas-applying"
description = "Logic for validating and applying new blocks and txs to the chain state"
version = "0.20.0"
edition = "2021"
repository = "https://github.com/MaicoLeberle/pallas"
homepage = "https://github.com/MaicoLeberle/pallas"
license = "Apache-2.0"
readme = "README.md"
authors = ["Maico Leberle <maico.leberle@gmail.com>"]

[lib]
doctest = false

[dependencies]
pallas-addresses = { path = "../pallas-addresses" }
pallas-codec = { path = "../pallas-codec" }
pallas-crypto = { path = "../pallas-crypto" }
pallas-primitives = { path = "../pallas-primitives" }
pallas-traverse = { path = "../pallas-traverse" }
rand = "0.8"

[dev-dependencies]
hex = "0.4"
