[package]
name = "pallas-applying"
description = "Logic for validating and applying new blocks and txs to the chain state"
version = "0.35.0"
edition = "2021"
repository = "https://github.com/MaicoLeberle/pallas"
homepage = "https://github.com/MaicoLeberle/pallas"
license = "Apache-2.0"
readme = "README.md"
authors = ["Maico Leberle <maico.leberle@gmail.com>"]

[lib]
doctest = false

[dependencies]
pallas-addresses = { version = "=0.35.0", path = "../pallas-addresses" }
pallas-codec = { version = "=0.35.0", path = "../pallas-codec" }
pallas-crypto = { version = "=0.35.0", path = "../pallas-crypto" }
pallas-primitives = { version = "=0.35.0", path = "../pallas-primitives" }
pallas-traverse = { version = "=0.35.0", path = "../pallas-traverse" }
rand = "0.8"
hex = "0.4"
chrono = "0.4.39"

[dev-dependencies]
hex = "0.4"
