[package]
name = "pallas-byron"
description = "Ledger primitives and cbor codec for the Byron era"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-byron"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "Santiago Carmuega <santiago@carmuega.me>",
    "Lucas Rosa <x@rvcas.dev>",

]

[dependencies]
minicbor = { version = "0.13", features = ["std"] }
minicbor-derive = "0.8.0"
hex = "0.4.3"
log = "0.4.14"
pallas-crypto = { version = "0.4.0", path = "../pallas-crypto" }
