[package]
name = "pallas-chainsync"
description = "Implementation of the Ouroboros network chainsync mini-protocol"
version = "0.3.4"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-chainsync"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "Santiago Carmuega <santiago@carmuega.me>"
]

[dependencies]
pallas-multiplexer = { version = "0.3.0", path = "../pallas-multiplexer/" }
pallas-machines = { version = "0.3.0", path = "../pallas-machines/" }
minicbor = { version = "0.12.0", features = ["half", "std"] }
log = "0.4.14"
hex = "0.4.3"

[dev-dependencies]
net2 = "0.2.37"
cryptoxide = "0.3.6"
env_logger = "0.9.0"
pallas-handshake = { version = "0.3.0", path = "../pallas-handshake/" }
pallas-txsubmission = { version = "0.3.0", path = "../pallas-txsubmission/" }
pallas-alonzo = { version = "0.3.0", path = "../pallas-alonzo/", features = ["crypto"] }
