[package]
name = "pallas-codec"
description = "Pallas common CBOR encoding interface and utilities"
version = "0.19.1"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-codec"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]

[dependencies]
hex = "0.4.3"
minicbor = { version = "0.19", features = ["std", "half", "derive"] }
serde = { version = "1.0.143", features = ["derive"] }
