[package]
name = "pallas-codec"
description = "Pallas common CBOR encoding interface and utilities"
version = "0.25.0"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-codec"
license = "Apache-2.0"
readme = "README.md"
authors = [
  "Santiago Carmuega <santiago@carmuega.me>",
  "Lucas Rosa <x@rvcas.dev>",
  "Kasey White <kwhitemsg@gmail.com>",
]

[features]
default = []

[dependencies]
hex = "0.4.3"
minicbor = { version = "0.24", features = ["std", "half", "derive"] }
num-bigint = { version = "0.4.4", optional = true }
serde = { version = "1.0.143", features = ["derive"] }
thiserror = "1.0.39"

[dev-dependencies]
proptest = "1.1.0"
