[package]
name = "pallas-codec"
description = "Pallas common CBOR encoding interface and utilities"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
documentation = "https://docs.rs/pallas-codec"
readme = "README.md"
authors.workspace = true

[features]
default = []

[dependencies]
hex.workspace = true
minicbor = { version = "0.26.0", features = ["std", "half", "derive"] }
num-bigint = { version = "0.4.4", optional = true }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
