[package]
name = "pallas-configs"
description = "Config structs and utilities matching the Haskell implementation"
version = "0.28.0"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-configs"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]

[dependencies]
hex = "0.4.3"
pallas-addresses = { version = "=0.28.0", path = "../pallas-addresses" }
pallas-crypto = { version = "=0.28.0", path = "../pallas-crypto" }
pallas-codec = { version = "=0.28.0", path = "../pallas-codec" }
pallas-primitives = { version = "=0.28.0", path = "../pallas-primitives" }
serde = { version = "1.0.136", optional = true, features = ["derive"] }
serde_json = { version = "1.0.79", optional = true }
base64 = "0.22.0"
serde_with = "3.7.0"
num-rational = "0.4.1"

[features]
json = ["serde", "serde_json"]
default = ["json"]
