[package]
name = "pallas-configs"
description = "Config structs and utilities matching the Haskell implementation"
version = "1.0.0-alpha.1"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-configs"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]

[dependencies]
pallas-addresses = { version = "=1.0.0-alpha.1", path = "../pallas-addresses" }
pallas-crypto = { version = "=1.0.0-alpha.1", path = "../pallas-crypto" }
pallas-primitives = { version = "=1.0.0-alpha.1", path = "../pallas-primitives" }
serde = { version = "1.0.136", optional = true, features = ["derive"] }
serde_json = { version = "1.0.79", optional = true }
base64 = "0.22.0"
serde_with = "3.7.0"
num-rational = "0.4.1"

[features]
json = ["serde", "serde_json"]
default = ["json"]
