[package]
name = "pallas-configs"
description = "Config structs and utilities matching the Haskell implementation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true
documentation = "https://docs.rs/pallas-configs"
readme = "README.md"

[dependencies]
pallas-addresses.workspace = true
pallas-crypto.workspace = true
pallas-primitives.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
base64 = "0.22.0"
serde_with.workspace = true
num-rational = "0.4.2"

[features]
json = ["serde", "serde_json"]
default = ["json"]
