[package]
name = "pallas-hardano"
description = "Pallas interoperability with the Haskel Cardano node implementation"
version = "0.32.0"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-hardano"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]

[dependencies]
thiserror = "1.0.49"
binary-layout = "3.2.0"
tap = "1.0.1"
tracing = "0.1.40"
pallas-traverse = { version = "=0.32.0", path = "../pallas-traverse" }
pallas-network = { version = "=0.32.0", path = "../pallas-network" }
pallas-addresses = { version = "=0.32.0", path = "../pallas-addresses" }
pallas-crypto = { version = "=0.32.0", path = "../pallas-crypto" }
pallas-codec = { version = "=0.32.0", path = "../pallas-codec" }

serde = { version = "1.0.218", features = ["derive"] }
hex = "0.4.3"
serde_with = "3.12.0"
serde_json = "1.0.140"

[dev-dependencies]
tracing-subscriber = "0.3.17"
hex = "0.4.3"
