[package]
name = "pallas-hardano"
description = "Pallas interoperability with the Haskel Cardano node implementation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true
documentation = "https://docs.rs/pallas-hardano"
readme = "README.md"

[dependencies]
thiserror.workspace = true
binary-layout = "4.0.2"
tap = "1.0.1"
tracing.workspace = true
pallas-traverse.workspace = true
pallas-network.workspace = true
pallas-addresses.workspace = true
pallas-crypto.workspace = true
pallas-codec.workspace = true

serde.workspace = true
hex.workspace = true
serde_with.workspace = true
serde_json.workspace = true

[dev-dependencies]
tracing-subscriber = "0.3.17"
