[package]
name = "pallas-localstate"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
license = "Apache-2.0"
authors = [
    "Santiago Carmuega <santiago@carmuega.me>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pallas-multiplexer = { path = "../pallas-multiplexer/" }
pallas-machines = { path = "../pallas-machines/" }
minicbor = { version="0.11.4", features=["half"] }
minicbor-io = "0.6.0"
log = "0.4.14"
hex = "0.4.3"

[dev-dependencies]
net2 = "0.2.37"
env_logger = "0.9.0"
pallas-handshake = { path = "../pallas-handshake/" }
pallas-txsubmission = { path = "../pallas-txsubmission/" }
