[package]
name = "pallas-localstate"
description = "Implementation of the Ouroboros network local state query mini-protocol"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-localstate/0.1.0/pallas_localstate/"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "Santiago Carmuega <santiago@carmuega.me>"
]

[dependencies]
pallas-multiplexer = { version = "0.3.0", path = "../pallas-multiplexer/" }
pallas-machines = { version = "0.3.0", path = "../pallas-machines/" }
minicbor = { version="0.11.4", features=["half", "std"] }
log = "0.4.14"
hex = "0.4.3"

[dev-dependencies]
net2 = "0.2.37"
env_logger = "0.9.0"
pallas-handshake = { path = "../pallas-handshake/" }
pallas-txsubmission = { path = "../pallas-txsubmission/" }
