[package]
name = "pallas-machines"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
license = "Apache-2.0"
authors = [
    "Santiago Carmuega <santiago@carmuega.me>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pallas-multiplexer = { path = "../pallas-multiplexer/" }
minicbor = { version="0.11.4", features=["half"] }
log = "0.4.14"
hex = "0.4.3"