[package]
name = "pallas-math"
description = "Mathematics functions for Cardano"
version = "0.32.1"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-math"
license = "Apache-2.0"
readme = "README.md"
authors = ["Andrew Westberg <andrewwestberg@gmail.com>"]
exclude = ["tests/data/*"]

[dependencies]
dashu-int = "0.4.1"
dashu-base = "0.4.1"
regex = "1.10.5"
thiserror = "1.0.61"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8"
proptest = "1.5"
