[package]
name = "pallas-math"
description = "Mathematics functions for Cardano"
version = "1.0.0-alpha.2"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-math"
license = "Apache-2.0"
readme = "README.md"
authors = ["Andrew Westberg <andrewwestberg@gmail.com>"]
exclude = ["tests/data/*"]

[dependencies]
num-integer = "0.1"
num-bigint = "0.4"
num-traits = "0.2"
regex = "1.10.5"
thiserror = "1.0.61"

[dev-dependencies]
proptest = "1.5"
