[package]
name = "pallas-miniprotocols"
description = "Implementation of the Ouroboros network mini-protocols state-machines"
version = "0.9.0-alpha.1"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-machines"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "Santiago Carmuega <santiago@carmuega.me>"
]

[dependencies]
pallas-multiplexer = { version = "0.9.0-alpha.0",  path = "../pallas-multiplexer/" }
pallas-codec = { version = "0.9.0-alpha.0",  path = "../pallas-codec/" }
log = "0.4.14"
hex = "0.4.3"
itertools = "0.10.3"
net2 = "0.2.37"
