[package]
name = "pallas-miniprotocols"
description = "Implementation of the Ouroboros network mini-protocols state-machines"
version = "0.15.0"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-machines"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]

[dependencies]
pallas-codec = { version = "0.15.0", path = "../pallas-codec/" }
pallas-multiplexer = { version = "0.15.0", path = "../pallas-multiplexer/" }
log = "0.4.14"
hex = "0.4.3"
itertools = "0.10.3"
thiserror = "1.0.31"

[dev-dependencies]
env_logger = "0.9.0"
log = "0.4.16"
