[package]
name = "pallas-multiplexer"
description = "Multithreaded Ouroboros multiplexer implementation using mpsc channels"
version = "0.5.0"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-multiplexer"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "Santiago Carmuega <santiago@carmuega.me>"
]

[dependencies]
log = "0.4.14"
byteorder = "1.4.3"
hex = "0.4.3"

[dev-dependencies]
rand = "0.8.4"
env_logger = "0.9.0"
