[package]
name = "pallas-multiplexer"
description = "Multithreaded Ouroboros multiplexer implementation using mpsc channels"
version = "0.14.0-alpha.1"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-multiplexer"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "Santiago Carmuega <santiago@carmuega.me>"
]

[dependencies]
pallas-codec = { version = "0.14.0-alpha.0",  path = "../pallas-codec/" }
log = "0.4.14"
byteorder = "1.4.3"
hex = "0.4.3"
rand = "0.8.4"
thiserror = "1.0.31"

[dev-dependencies]
env_logger = "0.9.0"

[features]
std = []
default = ["std"]
