[package]
name = "pallas-network"
description = "Ouroboros networking stack using async IO"
version = "1.0.0-alpha.0"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-upstream"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>", "Pi Lanningham <pi.lanningham@gmail.com>"]

[dependencies]
byteorder = "1.4.3"
hex = "0.4.3"
itertools = "0.13.0"
pallas-codec = { version = "=1.0.0-alpha.0", path = "../pallas-codec" }
pallas-crypto = { version = "=1.0.0-alpha.0", path = "../pallas-crypto" }
rand = "0.8.5"
socket2 = "0.5.5"
thiserror = "1.0.31"
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "sync", "macros"] }
tracing = "0.1.37"

[dev-dependencies]
tracing-subscriber = "0.3.16"
tokio = { version = "1", features = ["full"] }

