[package]
name = "pallas-network2"
description = "Ouroboros networking stack for P2P interactions"
version = "1.0.0-alpha.2"
edition = "2024"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]
publish = false

[dependencies]
futures = "0.3.31"
trait-variant = "0.1.2"
rand = { version = "0.9.1", optional = true }
tokio = { version = "1.45.1", optional = true, features = ["full"] }
pallas-codec = { path = "../pallas-codec" }
chrono = "0.4.41"
opentelemetry = "0.30.0"
tracing = "0.1.41"
byteorder = "1.5.0"
socket2 = "0.6.0"
thiserror = "2.0.16"
hex = "0.4.3"

[features]
emulation = ["tokio", "rand"]
default = ["emulation"]
blueprint = []

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full", "test-util"] }
